--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root{
     --font-App: 15px;
-    --font-Family-App: 'Fira Code Retina' ,'Consolas', 'Courier New', monospace;
+    --font-Family-App: 'Consolas', 'Courier New', monospace;
     --line-Height: 22px;
     --terminal-width: 600px;
 
